# SimpleCalculator

./: LICENSE  pyproject.toml  setup.py  simple-calculator.sublime-project
calcs/: __init__.py  calculator.py  exceptions.py  op_assign.py  op_basic.py  op_num.py  op_rng.py  op_str.py  op_utils.py  types.py  utils.py
calcs/tests/: __init__.py  test_calculator.py  test_op_assign.py  test_op_basic.py  test_op_num.py  test_op_rng.py  test_op_str.py  test_op_utils.py
common/calcs/: __init__.py  calculator.py  coercion.py  constants.py  exceptions.py  numtypes.py  op_assign.py  op_num.py  op_rng.py  op_str.py  op_utils.py  ops.py  ops_basic.py  types.py
