[tool.poetry]
name = 'SimpleCalculator'
version = '0.0.2'
description = 'Simple calculator'
authors = ['gimi65536']
license = 'MIT'
packages = [
	{include = 'calcs'},
]
include = [
	'*/py.typed',
]

[tool.poetry.dependencies]
python = '>= 3.11'
more_itertools = '>= 9'
sympy = '>= 1.11.1'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'